# mcp-rfp-server-

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  startup.sh
knowledge_base/: company_core_values.txt  company_overview.txt  compliance_certifications.txt  management_agile_methodology.txt  past_performance_project_nexus.txt  past_performance_project_sentinel.txt  personnel_key_bios.txt  pricing_model.txt  product_quantum_grid_architecture.txt  product_quantum_grid_features.txt  security_framework.txt  support_and_sla.txt  technical_implementation_plan.txt  training_plan.txt
scripts/: populate_knowledge_base.py  start_server.py
src/mcp_rfp_server/: config.py  main.py
src/mcp_rfp_server/gemini/: orchestrator.py
src/mcp_rfp_server/integrations/: __init__.py  google_drive.py  sharepoint.py
src/mcp_rfp_server/mcp/: protocol_handler.py  server.py
src/mcp_rfp_server/resources/: knowledge_base.py  templates.py
src/mcp_rfp_server/schemas/: mcp_types.py  rfp_schemas.py
src/mcp_rfp_server/tools/: document_processor.py  knowledge_search.py  proposal_generator.py
src/mcp_rfp_server/utils/: quality_assurance.py  text_processing.py  vector_store.py
