[tool.poetry]
name = "mcp-rfp-server"
version = "1.0.0"
description = "MCP-compliant RFP processing server with Gemini integration and SharePoint support"
authors = ["Nwachukwu Favour <nwachukwufavour017@gmail.com>"]
packages = [{include = "src"}, {include = "scripts"}]

[tool.poetry.dependencies]
python = "^3.11"
# Core MCP and AI dependencies
mcp = "^1.13.1"
google-generativeai = "^0.5.4"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Document processing
PyMuPDF = "^1.24.1"
python-docx = "^1.1.2"
python-multipart = "^0.0.9"

# NLP and embeddings
spacy = "^3.7.4"
sentence-transformers = "^2.7.0"

# Vector database
chromadb = "^0.5.0"

# Web framework (optional HTTP interface)
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.31.1"}

# SharePoint and HTTP client dependencies
aiohttp = "^3.9.0"

# Utilities
aiofiles = "^23.0.0"
python-dotenv = "^1.0.0"
structlog = "^23.0.0"
certifi = "^2025.8.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"