[tool.poetry]
name = "mcp-rfp-server"
version = "1.0.0"
description = "MCP-RFP Server with Gemini Integration"
authors = ["Nwachukwu Favour <nwachukwufavour017@gmail.com>"]
packages = [{include = "src"}, {include = "scripts"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.2.1"
pydantic = "^2.7.1"
python-dotenv = "^1.0.1"
asyncio = "^3.4.3"
websockets = "^12.0"
google-generativeai = "^0.5.4"
chromadb = "^0.5.0"
sentence-transformers = "^2.7.0"
spacy = "^3.7.4"
aiohttp = "^3.9.5"
uvloop = "^0.19.0"
loguru = "^0.7.2"
google-api-python-client = "^2.126.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
python-docx = "^1.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"